--- a/libs/examples/src/table/table-empty-state-example/table-empty-state-example.html
+++ b/libs/examples/src/table/table-empty-state-example/table-empty-state-example.html
@@ -23,8 +23,8 @@
   ></dt-simple-text-column>
   <dt-simple-text-column name="device" label="Device"></dt-simple-text-column>
 
-  <dt-empty-state>
-    <dt-empty-state-item>
+  <dt-empty-state role="row">
+    <dt-empty-state-item role="cell">
       <dt-empty-state-item-img>
         <img
           alt="glass"
